==> MN-123/STM32-projects/STM32F103C8/PCD8544_LCD/src/stm32f10_pcd8544.c <==
#include "stm32f10_pcd8544.h"
#include "stm32f10x.h"
#include "stm32f10x_conf.h"
#include "diag/Trace.h"

void
PCD8544_InitIO (void)
{
 // Initialize SPI
 RCC_APB2PeriphClockCmd (RCC_APB2Periph_GPIOB | RCC_APB2Periph_AFIO, ENABLE);
 RCC_APB2PeriphClockCmd (RCC_APB2Periph_GPIOA, ENABLE);
 RCC_APB2PeriphClockCmd (RCC_APB2Periph_GPIOB, ENABLE);
 RCC_APB2PeriphClockCmd (RCC_APB2Periph_GPIOC, ENABLE);
 RCC_APB1PeriphClockCmd (RCC_APB1Periph_SPI2, ENABLE);

 GPIO_InitTypeDef GPIO_InitStruct;
 SPI_InitTypeDef SPI_InitStruct;

 // MOSI & CLK
 GPIO_InitStruct.GPIO_Pin = GPIO_Pin_13 | GPIO_Pin_15;
 GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;
 GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
 GPIO_Init (GPIOB, &GPIO_InitStruct);

 GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;

 GPIO_InitStruct.GPIO_Pin = PCD8544_RST_PIN;
 GPIO_Init (PCD8544_RST_PORT, &GPIO_InitStruct);

 GPIO_InitStruct.GPIO_Pin = PCD8544_DC_PIN;
 GPIO_Init (PCD8544_DC_PORT, &GPIO_InitStruct);

 GPIO_InitStruct.GPIO_Pin = PCD8544_CE_PIN;
 GPIO_Init (PCD8544_CE_PORT, &GPIO_InitStruct);

 GPIO_SetBits (PCD8544_RST_PORT, PCD8544_RST_PIN);
 PCD8544_CE_HIGH;

 SPI_InitStruct.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16; //18MHz, LCD max 20
 SPI_InitStruct.SPI_Direction = SPI_Direction_1Line_Tx;
 SPI_InitStruct.SPI_Mode = SPI_Mode_Master;
 SPI_InitStruct.SPI_DataSize = SPI_DataSize_8b;
 SPI_InitStruct.SPI_CPOL = SPI_CPOL_Low;
 SPI_InitStruct.SPI_CPHA = SPI_CPHA_1Edge;
 SPI_InitStruct.SPI_NSS = SPI_NSS_Soft;
 SPI_InitStruct.SPI_FirstBit = SPI_FirstBit_MSB;
 SPI_InitStruct.SPI_CRCPolynomial = 7;
 SPI_Init (SPI2, &SPI_InitStruct);

 SPI_Cmd (SPI2, ENABLE);
}

inline void
PCD8544_send (uint8_t byte)
{
 uint32_t timeout = 100000;
 PCD8544_CE_LOW;
 SPI_I2S_SendData (PCD8544_SPI, byte);

 while (SPI_I2S_GetFlagStatus (PCD8544_SPI, SPI_I2S_FLAG_TXE) == RESET
   || SPI_I2S_GetFlagStatus (PCD8544_SPI, SPI_I2S_FLAG_BSY) == SET)
  {
   if (timeout-- < 1u)
    {
     trace_puts ("SPI TIMEOUT!");
     PCD8544_CE_HIGH;
     return;
    }
  }
 asm("nop");
 PCD8544_CE_HIGH;
}

void
PCD8544_Pin (PCD8544_Pin_t pin, PCD8544_State_t state)
{
 switch (pin)
  {
  case PCD8544_Pin_DC:
   if (state != PCD8544_State_Low)
    {
     GPIO_SetBits (PCD8544_DC_PORT, PCD8544_DC_PIN);
    }
   else
    {
     GPIO_ResetBits (PCD8544_DC_PORT, PCD8544_DC_PIN);
    }
   break;
  case PCD8544_Pin_RST:
   if (state != PCD8544_State_Low)
    {
     GPIO_SetBits (PCD8544_RST_PORT, PCD8544_RST_PIN);
    }
   else
    {
     GPIO_ResetBits (PCD8544_RST_PORT, PCD8544_RST_PIN);
    }
   break;
  default:
   break;
  }
}
