==> valeriosetti/reflow-oven/project/pcd8544.c <==
#include "pcd8544.h"

void PCD8544_InitIO(void) {
	GPIO_InitTypeDef 	GPIO_InitStruct;
	TIM_OC_InitTypeDef 	TIM3_OC_init;

	// Enable clock for all pins
	PCD8544_CE_CLKEN();
	PCD8544_DIN_CLKEN();
	PCD8544_CLK_CLKEN();
	PCD8544_RST_CLKEN();
	PCD8544_DC_CLKEN();
	PCD8544_BKL_CLKEN();

	// Control pins
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStruct.Alternate = GPIO_MODE_AF_PP;
	//		RST
	GPIO_InitStruct.Pin = PCD8544_RST_PIN;
	HAL_GPIO_Init(PCD8544_RST_PORT, &GPIO_InitStruct);
	// 		D/C
	GPIO_InitStruct.Pin = PCD8544_DC_PIN;
	HAL_GPIO_Init(PCD8544_DC_PORT, &GPIO_InitStruct);
	//		CE
	GPIO_InitStruct.Pin = PCD8544_CE_PIN;
	HAL_GPIO_Init(PCD8544_CE_PORT, &GPIO_InitStruct);
	PCD8544_CE_HIGH;

	// SPI pins
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_PULLUP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FAST;
	GPIO_InitStruct.Alternate = GPIO_AF5_SPI2;
	// 		CLK
	GPIO_InitStruct.Pin = PCD8544_CLK_PIN;
	HAL_GPIO_Init(PCD8544_CLK_PORT, &GPIO_InitStruct);
	// 		DIN
	GPIO_InitStruct.Pin = PCD8544_DIN_PIN;
	HAL_GPIO_Init(PCD8544_DIN_PORT, &GPIO_InitStruct);

	// Backlight pin
	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStruct.Alternate = GPIO_AF2_TIM4;
	GPIO_InitStruct.Pin = PCD8544_BKL_PIN;
	HAL_GPIO_Init(PCD8544_BKL_PORT, &GPIO_InitStruct);

	// Timer4 initialization
	__TIM4_CLK_ENABLE();
	hTIM.Instance = TIM4;
	hTIM.Init.Prescaler = 0x2;
	hTIM.Init.CounterMode = TIM_COUNTERMODE_UP;
	hTIM.Init.Period = 0xFFFF;
	hTIM.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
	hTIM.Init.RepetitionCounter = 0;
	HAL_TIM_PWM_Init(&hTIM);
	// Configure OC for PWM generation
	TIM3_OC_init.OCMode = TIM_OCMODE_PWM1;
	TIM3_OC_init.Pulse = 0x0000;	// set the PWM to the min value at the beginning
	TIM3_OC_init.OCPolarity = TIM_OCPOLARITY_HIGH;
	TIM3_OC_init.OCFastMode = TIM_OCFAST_DISABLE;
	TIM3_OC_init.OCIdleState = TIM_OCIDLESTATE_RESET;
	HAL_TIM_PWM_ConfigChannel(&hTIM, &TIM3_OC_init, TIM_CHANNEL_1);
	// Enable the PWM
	HAL_TIM_PWM_Start(&hTIM, TIM_CHANNEL_1);

	// Initialize SPI
	__HAL_RCC_SPI2_CLK_ENABLE();
	hSPI.Instance = SPI2;
	hSPI.Init.Mode = SPI_MODE_MASTER;
	hSPI.Init.Direction = SPI_DIRECTION_2LINES;
	hSPI.Init.DataSize = SPI_DATASIZE_8BIT;
	hSPI.Init.CLKPolarity = SPI_POLARITY_LOW;
	hSPI.Init.CLKPhase = SPI_PHASE_1EDGE;
	hSPI.Init.NSS = SPI_NSS_SOFT;
	hSPI.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;
	hSPI.Init.FirstBit = SPI_FIRSTBIT_MSB;
	hSPI.Init.TIMode = SPI_TIMODE_DISABLED;
	hSPI.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLED;
	hSPI.Init.CRCPolynomial = 7;
	HAL_SPI_Init(&hSPI);
}

void PCD8544_send(unsigned char data) {
	PCD8544_CE_LOW;
	HAL_SPI_Transmit(&hSPI, &data, 1, 1000);
	PCD8544_CE_HIGH;
}

void PCD8544_Pin(PCD8544_Pin_t pin, PCD8544_State_t state) {
	switch (pin) {
		case PCD8544_Pin_DC:
			if (state != PCD8544_State_Low) {
				PCD8544_DC_HIGH;
			} else {
				PCD8544_DC_LOW;
			}
			break;
		case PCD8544_Pin_RST:
			if (state != PCD8544_State_Low) {
				PCD8544_RST_HIGH;
			} else {
				PCD8544_RST_LOW;
			}
			break;
		default: break;
	}
}
